--- a/index.html
+++ b/index.html
@@ -309,11 +309,13 @@
             <!--content-->
             <h1>What you do</h1>
 
-            <p></p>
-
-
-
-
+            <p>You can:</p>
+            <ul>
+                <li>go sightseeing at the historic landmarks</li>
+                <li>go to the beach</li>
+                <li>shop at the two mall or the many markets</li>
+            </ul>
+            
 
 
             <a href="#s3" class="ui-btn ui-corner-all ui-btn-icon-notext ui-btn-inline ui-icon-carat-l ui-btn-icon-left backP" data-theme="a">Back</a>
@@ -341,7 +343,7 @@
             <!--content-->
             <h1>Where you go</h1>
 
-            <p></p>
+            <p>If you are in Managua there are some sights (cathedral or the lake). About an hour from Managua there's Granada and Masaya which are smaller in population and infrastucture but very pretty because of their culture. There are two main beaches: San Juan del sur and pochomil which are great beaches and are about two hours from Managua.</p>
 
 
             <a href="#s4" class="ui-btn ui-corner-all ui-btn-icon-notext ui-btn-inline ui-icon-carat-l ui-btn-icon-left backP" data-theme="a">Back</a>
@@ -367,7 +369,7 @@
             <!--content-->
             <h1>The last step is how to behave like a Nicaraguan</h1>
 
-            <p></p>
+            <p>The culture in Nicaragua is very friendly and helpful. Nicaraguans try to push the rules in their advantage by trying to bargain everything and talk themselves out of troubles.</p>
 
             
             <a href="#s5" class="ui-btn ui-corner-all ui-btn-icon-notext ui-btn-inline ui-icon-carat-l ui-btn-icon-left backP" data-theme="a">Back</a>
