--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li data-icon="delete" class="ui-first-child"><a href="#" data-rel="close" class="ui-btn ui-btn-icon-right ui-icon-delete">Close</a>
                     </li>
                     <div data-role="collapsible" data-collapsed="true">
-                        <h4>Wine Tasting</h4>
+                        <h4>How to be Nicaraguan</h4>
                         <ul data-role="listview">
                             <li><a href="#s1" class="ui-btn">Step 1</a>
                             </li>
